fixed scrollbar styles

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -27,20 +27,20 @@ ul {
 
 /// SCROLLBAR STYLES ///
 body::-webkit-scrollbar,
-.menu-filter::-webkit-scrollbar {
+.filterMenu::-webkit-scrollbar {
   background-color: $color-primary-dark; /* Color de fondo deseado */
   height: 10px; /* Altura de la barra de desplazamiento */
 }
 
 /* Cambiar el color del "rastro" de la barra de desplazamiento (la parte que no está siendo arrastrada) */
-body::-webkit-scrollbar,
-.menu-filter::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track,
+.filterMenu::-webkit-scrollbar-track {
   background-color: $color-primary-medium; /* Color de fondo deseado */
 }
 
 /* Cambiar el color del "pulgar" de la barra de desplazamiento (la parte que se arrastra) */
-body::-webkit-scrollbar,
-.menu-filter::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.filterMenu::-webkit-scrollbar-thumb {
   background-color: $color-primary-light; /* Color de fondo deseado */
 }
 /// SCROLLBAR STYLES //
